# agent

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  README_TOOL_TESTS.md  agent.md  api_server.py  bootstrap.bat  bootstrap.sh  code_agent  code_agent.spec  conf.yaml.example  docker-compose.yml  flow.py  langgraph.json  main.py  mcp.json  mcp.json.example  package-lock.json  package.json  pre-commit  project_analysis_report.md  pyproject.toml  pytest.ini  requirements.txt  run.bat  run.sh  run_in_test_directory.sh  run_simple.py  run_simple.sh  run_swe_agent.py  run_tests.py  run_tests.sh  server.py  start_local.py  start_local.sh  test_code_agent.py  test_format.py  todo
.backups/: project_analysis_report.md.20250605_224710.backup
agent/: flow.py
ai-agent-docs/: Terminal日志优化总结.md  日志优化总结.md
assets/: architecture_detailed.md
benckmark/: benchmark.md
change-log/: TEST_COVERAGE_REPORT.md  cursor_prompt_optimization.md  enhanced_rag_retriever_implementation.md  intelligent_file_filtering_implementation.md  rag_enhanced_code_agent_fixes.md  readme_architecture_update.md  todo_completion_report.md  产品调研完成报告.md
changelog/: architecture_optimization_implementation.md  deep_research_agent_refactoring.md  execute_prompt_claude_optimization.md  intelligent_workspace_analyzer_gitignore_support.md  leader_prompt_claude_optimization.md  rag_enhanced_code_agent_implementation.md  replanning_logic_fix.md  test_fix_rag_enhanced_code_agent.md
docs/: CODE_AGENT_CLI_README.md  CODE_RAG_README.md  POTENTIAL_IMPROVEMENTS.md  PROMPT_UNIFICATION_SUMMARY.md  SYSTEM_ARCHITECTURE.md  TOOL_OPTIMIZATION_SUMMARY.md  agent.md  api_reference.md  architect_agent_architecture.md  architect_agent_implementation_summary.md  code_agent_testing_guide.md  configuration_guide.md  context_management.md  detailed_rag_testing_report.md  enhanced_rag_retriever.md  logging_guide.md  prd.csv  pre-commit-setup.md  rag_enhanced_code_agent.md  rag_indexing_improvements.md  rag_testing_report.md  rag_workspace_limitation.md  swe_agent_usage.md  tool_testing_guide.md  workspace_tools_guide.md
examples/: code_agent_reflection_demo.py  code_rag_example.py  dashscope_rag_test.py  enhanced_rag_demo.py  enhanced_rag_integration_demo.py  optimized_tools_demo.py  quick_dashscope_test.py  rag_enhanced_code_agent_demo.py  simple_dashscope_test.py  simple_token_example.py
nodes/: crawler_node.py  mcp_nodes.py  parser_node.py  search_answer_nodes.py
packaging/: README.md  SUMMARY.md  build.py  test_build.py
prd/: AI_信息流应用_降低认知负担_产品调研与方案设计.md  AI_写作灵感工具_产品调研与方案设计.md
prompts/: decide_tool.txt  need_more_tools.txt
scripts/: README.md  check_prompt_consistency.py  check_prompt_language.py  code_agent_cli.py  code_agent_simple_cli.py  code_rag_cli.py  demo_code_agent_cli.py  rag_enhanced_code_agent_cli.py  (+7 more)
(+366 files in other folders)
