[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent"
version = "0.1.0"
description = "Flow project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "langchain-community>=0.3.19",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.8",
    "langgraph>=0.3.5",
    "readabilipy>=0.3.0",
    "python-dotenv>=1.0.1",
    "socksio>=1.0.0",
    "markdownify>=1.1.0",
    "fastapi>=0.103.0",
    "uvicorn>=0.27.1",
    "sse-starlette>=1.6.5",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "yfinance>=0.2.54",
    "litellm>=1.63.11",
    "json-repair>=0.7.0",
    "jinja2>=3.1.3",
    "duckduckgo-search>=8.0.0",
    "inquirerpy>=0.3.4",
    "arxiv>=2.2.0",
    "mcp>=1.6.0",
    "langchain-mcp-adapters>=0.0.9",
    "tenacity>=9.0.0",
    "langchain-core>=0.3.43",
    "nest-asyncio>=1.6.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "jsonschema>=4.19.0",
    "selenium>=4.15.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "playwright>=1.40.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "bandit>=1.7.0",
    "radon>=6.0.0",
    "psutil>=5.9.0",
    "memory-profiler>=0.61.0",
    "py-spy>=0.3.14",
    "matplotlib>=3.7.0",
    "sqlalchemy>=2.0.0",
    "redis>=5.0.0",
    "pymongo>=4.5.0",
    "flask>=2.3.0",
    "django>=4.2.0",
    "scikit-learn>=1.3.0",
    "aiohttp>=3.8.0",
    "asyncio-mqtt>=0.11.0",
    "ipython>=8.15.0",
    "jupyter>=1.0.0",
    "rich>=13.5.0",
    "cryptography>=41.0.0",
    "certifi>=2023.7.0",
    "sphinx>=7.2.0",
    "mkdocs>=1.5.0",
    "docker>=6.1.0",
    "kubernetes>=27.2.0",
    "llama-index>=0.12.38",
    "llama-index-core>=0.12.41",
    "llama-index-embeddings-openai>=0.3.1",
    "llama-index-vector-stores-chroma>=0.4.2",
]

[project.optional-dependencies]
dev = [
    "black>=24.2.0",
    "langgraph-cli[inmem]>=0.2.10",
    "pyinstaller>=6.4.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.report]
fail_under = 25

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/build/
'''

[dependency-groups]
dev = [
    "pyinstaller>=6.14.0",
]
